<resources>
    <string name="app_name">Do Task For Me</string>
    <string name="title_activity_splash_screen">SplashScreen</string>
    <string name="do_task_for_me">Do Task For Me</string>
    <string name="splash">Splash</string>
    <string name="sign_up">Sign Up</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm password</string>
    <string name="already_have_an_account_sign_in">Already have an account? Sign In</string>
    <string name="login">Login</string>
    <string name="don_t_have_an_account_sign_up">Don\'t have an account? Sign Up</string>
    <string name="google_icon">Google Icon</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="student">Student</string>
    <string name="admin">Admin</string>
    <string name="forget_password">Forget Password?</string>
    <string-array name="assignment_types">
        <item>Select Assignment Type</item>
        <item>English Writing Based Assignments</item>
        <item>Research Paper (Thesis)</item>
        <item>FYP Based</item>
        <item>All Types of Presentations</item>
        <item>App Development</item>
        <item>Game Development</item>
        <item>Web Development</item>
        <item>Content Writing for Any Platform</item>
        <item>Research</item>
        <item>Semester/Term Project</item>
        <item>Professional Web App</item>
        <item>Technical Report</item>
        <item>Lab Report</item>
    </string-array>
    <string-array name="viva">
        <item>No</item>
        <item>Yes (15% increase in price) [We Will Contact You for Timing]</item>
    </string-array>
    <string-array name="orderstatus">
        <item>Pending</item>
        <item>Completed</item>
    </string-array>
    <string name="client_id">940224446519-hcs1d7g69fi9c2h1omi48j2vsluhhhnp.apps.googleusercontent.com</string>
    <string name="complete_your_institute_assignment_with_0_plagiarism">Complete your institute assignment with 0% Plagiarism.</string>
    <string name="info">Creative solutions to improve your grades involve identifying unique and innovative strategies that can enhance your assignments, tasks, and projects. The goal is to find ways to differentiate your assignments from competitors.</string>

</resources>
